--- a/WEB/src/app/home/home.component.html
+++ b/WEB/src/app/home/home.component.html
@@ -1,7 +1,6 @@
-<nav class="navbar navbar-inverse">
-        <ul class="nav navbar-nav">
-       
-        </ul>
-      
-      </nav>
+<div class="navbar navbar-default navbar-fixed-top">
+        <div class="navbar-header">
+            <a target="_blank"  class="navbar-brand">Company Name</a>
+        </div>
+</div>
 <router-outlet></router-outlet>
