--- a/WEB/src/app/home/content-mgmnt/workspace/work-space.html
+++ b/WEB/src/app/home/content-mgmnt/workspace/work-space.html
@@ -1,4 +1,4 @@
-<app-ngx-editor [placeholder]="'Enter text here...'" [spellcheck]="true" [(ngModel)]="workSpaceContent"></app-ngx-editor>
+<!--app-ngx-editor [placeholder]="'Enter text here...'" [spellcheck]="true" [(ngModel)]="workSpaceContent"></app-ngx-editor>-->
 <div mat-dialog-actions class="host-table-header">
     <button id="updateBtn" mat-raised-button color="primary" (click)="saveWorkSpaceChange()">SAVE</button>
     <div class="divider"></div>
