--- a/WEB/src/app/home/content-mgmnt/content-subject/content-subject.component.html
+++ b/WEB/src/app/home/content-mgmnt/content-subject/content-subject.component.html
@@ -1,123 +1,70 @@
-<div class="container-fluid">
-  <ul class="breadcrumb">
-    <li>
-      <a (click)="navigateToHome()">Home</a>/</li>
-    <li><a (click)="navigateToHome()">Class</a>/</li>
-    <li><a (click)="navigateToHome()">Subjects</a></li>
-  </ul>
-  <div class="container-fluid padd-15">
-    <div class="row">
-      <div class="col-md-3">
-        <div class="book-tables wh-bg">
-          <div class="media">
-            <div class="media-body">
-              <h4 class="media-heading">
-                <strong>{{user.firstname}} {{user.lastname}}</strong>
-              </h4>
-              <P>
-                <strong>{{user.email}}</strong>
-              </P>
-              <p>
-                <strong>{{user.mobileno}}</strong>
-              </p>
-              <p>ROLE :
-                <strong>{{user.role}}</strong>
-              </p>
-            </div>
-          </div>
-        </div>
-
-        <mat-expansion-panel *ngFor="let class of classList">
-          <mat-expansion-panel-header>
-            <a (click)="viewSubjectList(class)">
-              <mat-panel-title>
-                <i class="material-icons">folder</i>
-                {{class.displayName}}
-              </mat-panel-title>
-            </a>
-          </mat-expansion-panel-header>
-          <ul class="listItems">
-            <li *ngFor="let subj of subjectList">
-              <a (click)="viewChapterList(subj)">
-                {{subj.displayName}}
-              </a>
-            </li>
-          </ul>
-        </mat-expansion-panel>
+<div class="container-fluid padd-15">
+  <div class="media-body">
+    <div class="order-history">
+      <div class="history-head">
+        <span>{{classDetail.displayName}}</span>
       </div>
-
-      <div class="col-md-9">
-        <div class="media-body">
-          <div class="order-history">
-            <div class="history-head">
-              <span>{{classDetail.displayName}}</span>
-            </div>
-            <div class="history-body">
-              <div class="media-left">
-                <img class="person-card-avatar bigPicture" src="{{classDetail.icon?classDetail.icon:'assets/images/class.jpg'}}">
-                <span>{{classDetail.description}}</span>
-              </div>
-            </div>
-          </div>
+      <div class="history-body">
+        <div class="media-left">
+          <img class="person-card-avatar bigPicture" src="{{classDetail.icon?classDetail.icon:'assets/images/class.jpg'}}">
+          <span>{{classDetail.description}}</span>
         </div>
+      </div>
+    </div>
+  </div>
 
-        <div class="book-tables wh-bg history">
-          <h4 class="media-heading">
-            <strong>Details About Subjects</strong>
-          </h4>
-          <div>
-            <div class="pull-right right-btn">
-              <a class="action-link" (click)="addSubjectDetails()">
-                <span class="glyphicon glyphicon-plus-sign green-icon"></span>
-                <span class="txt">Add Subject</span>
-              </a>
-            </div>
-            <div class="media-body">
-              <div class="order-history" *ngFor="let subject of subjectList">
-                  <a class="action-link" (click)="userWorkkSpace(subject)" *ngIf="user.role=='TEACHER'">
-                      <span class="glyphicon glyphicon-plus-sign green-icon"></span>
-                      <span class="txt">WorkSpace</span>
-                    </a>
-                <div class="history-head">
-                  <span>{{subject.displayName}}</span>
-                  <!--div class="pull-right hostOrderLink">
+  <div class="book-tables wh-bg history">
+    <h4 class="media-heading">
+      <strong>Details About Subjects</strong>
+    </h4>
+    <div>
+      <div class="pull-right right-btn">
+        <a class="action-link" (click)="addSubjectDetails()">
+          <span class="glyphicon glyphicon-plus-sign green-icon"></span>
+          <span class="txt">Add Subject</span>
+        </a>
+      </div>
+      <div class="media-body">
+        <div class="order-history" *ngFor="let subject of subjectList">
+          <a class="action-link" (click)="userWorkkSpace(subject)">
+            <span class="glyphicon glyphicon-plus-sign green-icon"></span>
+            <span class="txt">WorkSpace</span>
+          </a>
+          <div class="history-head">
+            <span>{{subject.displayName}}</span>
+            <!--div class="pull-right hostOrderLink">
                       <a (click)="viewYourWorkSpace(class)">WORK-SPACE</a>
                     </div-->
-                </div>
-                <div class="history-body">
-                    <div class="media-left">
-                        <img class="person-card-avatar bigPicture" src="{{subject.icon?subject.icon:'assets/images/class.jpg'}}">
-                        <a id="photoSelector" mat-icon-button (click)='onChangeImage(subject)'  *ngIf="user.role=='ADMIN'">
-                          <mat-icon>photo_camera</mat-icon> Edit image
-                        </a>
-                      </div>
-                  <div class="media-left">
-                    <span>{{subject.description}}</span>
-                  </div>
-                </div>
-                <div class="history-foot">
-                  <div class="pull-right">
-                    <a class="action-link" (click)="viewChapterList(subject)">
-                      <span class="glyphicon glyphicon-plus-sign green-icon"></span>
-                      <span class="txt">chapters</span>
-                    </a>
-                    <a class="action-link" (click)="editSubjectDetail(subject)" *ngIf="user.role=='ADMIN'">
-                      <span class="glyphicon glyphicon-plus-sign green-icon"></span>
-                      <span class="txt">EDIT</span>
-                    </a>
-                    <a class="action-link" (click)="deleteSubjectDetail(subject)" *ngIf="user.role=='ADMIN'">
-                      <span class="glyphicon glyphicon-plus-sign green-icon"></span>
-                      <span class="txt">DELETE</span>
-                    </a>
-                  </div>
-
-                </div>
-              </div>
+          </div>
+          <div class="history-body">
+            <div class="media-left">
+              <img class="person-card-avatar bigPicture" src="{{subject.icon?subject.icon:'assets/images/class.jpg'}}">
+              <a id="photoSelector" mat-icon-button (click)='onChangeImage(subject)'>
+                <mat-icon>photo_camera</mat-icon> Edit image
+              </a>
+            </div>
+            <div class="media-left">
+              <span>{{subject.description}}</span>
+            </div>
+          </div>
+          <div class="history-foot">
+            <div class="pull-right">
+              <a class="action-link" (click)="viewChapterList(subject)">
+                <span class="glyphicon glyphicon-plus-sign green-icon"></span>
+                <span class="txt">chapters</span>
+              </a>
+              <a class="action-link" (click)="editSubjectDetail(subject)">
+                <span class="glyphicon glyphicon-plus-sign green-icon"></span>
+                <span class="txt">EDIT</span>
+              </a>
+              <a class="action-link" (click)="deleteSubjectDetail(subject)">
+                <span class="glyphicon glyphicon-plus-sign green-icon"></span>
+                <span class="txt">DELETE</span>
+              </a>
             </div>
           </div>
         </div>
       </div>
-
     </div>
   </div>
 </div>
