--- a/WEB/src/app/home/content-mgmnt/content-subject/content-topic/content-topic.html
+++ b/WEB/src/app/home/content-mgmnt/content-subject/content-topic/content-topic.html
@@ -1,116 +1,65 @@
-<div class="container-fluid">
-  <ul class="breadcrumb">
-    <li><a (click)="navigateToHome()">Home</a>/</li>
-    <li><a (click)="navigateToHome()">Classes</a>/</li>
-    <li><a (click)="navigateToHome()">Subjects</a>/</li>
-    <li><a (click)="navigateToHome()">Chapters</a>/</li>
-  </ul>
-  <div class="container-fluid padd-15">
-    <div class="row">
-      <div class="col-md-3">
-        <div class="book-tables wh-bg">
-          <div class="media">
-            <div class="media-body">
-              <h4 class="media-heading">
-                <strong>{{user.firstname}} {{user.lastname}}</strong>
-              </h4>
-              <P>
-                <strong>{{user.email}}</strong>
-              </P>
-              <p>
-                <strong>{{user.mobileno}}</strong>
-              </p>
-              <p>ROLE :
-                <strong>{{user.role}}</strong>
-              </p>
-            </div>
-          </div>
-        </div>
-
-        <mat-expansion-panel *ngFor="let class of classList">
-          <mat-expansion-panel-header>
-            <a (click)="viewSubjectList(class)">
-              <mat-panel-title>
-                <i class="material-icons">folder</i>
-                {{class.displayName}}
-              </mat-panel-title>
-            </a>
-          </mat-expansion-panel-header>
-          <ul class="listItems">
-            <li *ngFor="let subj of subjectList">
-              <a (click)="viewChapterList(subj)">
-                 {{subj.displayName}}
-              </a>
-            </li>
-          </ul>
-        </mat-expansion-panel>
+<div class="container-fluid padd-15">
+  <div class="media-body">
+    <div class="order-history">
+      <div class="history-head">
+        <span>{{subjectDetail.displayName}}</span>
       </div>
-
-      <div class="col-md-9">
-        <div class="media-body">
-          <div class="order-history">
-            <div class="history-head">
-              <span>{{subjectDetail.displayName}}</span>
-            </div>
-            <div class="history-body">
-              <div class="media-left">
-                  <img class="person-card-avatar bigPicture" src="{{subjectDetail.icon?subjectDetail.icon:'assets/images/class.jpg'}}">
-                <span>{{subjectDetail.description}}</span>
-              </div>
+      <div class="history-body">
+        <div class="media-left">
+          <img class="person-card-avatar bigPicture" src="{{subjectDetail.icon?subjectDetail.icon:'assets/images/class.jpg'}}">
+          <span>{{subjectDetail.description}}</span>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="book-tables wh-bg history">
+    <h4 class="media-heading">
+      <strong>Details About Chapter</strong>
+    </h4>
+    <div class="media">
+      <div class="pull-right right-btn">
+        <a class="action-link" (click)="addTopicDetails()">
+          <span class="glyphicon glyphicon-plus-sign green-icon"></span>
+          <span class="txt">Add Topic</span>
+        </a>
+      </div>
+      <div class="media-body">
+        <div class="order-history" *ngFor="let topic of topics">
+          <div class="history-head">
+            <span>{{topic.displayName}}</span>
+            <div class="pull-right hostOrderLink">
+              <a (click)="userWorkSpace(topic)">WorkSpace</a>
             </div>
           </div>
-        </div>
-
-        <div class="book-tables wh-bg history">
-          <h4 class="media-heading">
-            <strong>Details About Chapter</strong>
-          </h4>
-          <div class="media">
-            <div class="pull-right right-btn">
-              <a class="action-link" (click)="addTopicDetails()">
+          <div class="history-body">
+            <div class="media-left">
+              <video width="400" controls>
+                <source src="{{topic.playFileURL}}" type="video/mp4">
+              </video>
+            </div>
+            <div class="media-left">
+              <span>{{topic.description}}</span>
+            </div>
+          </div>
+          <div class="history-foot">
+            <div class="pull-right">
+              <a class="action-link" (click)="uploadVideo(topic)">
                 <span class="glyphicon glyphicon-plus-sign green-icon"></span>
-                <span class="txt">Add Topic</span>
+                <span class="txt">Upload Video</span>
+              </a>
+              <a class="action-link" (click)="editChapterDetail(topic)">
+                <span class="glyphicon glyphicon-plus-sign green-icon"></span>
+                <span class="txt">EDIT</span>
+              </a>
+              <a class="action-link" (click)="deleteChapterDetail(topic)">
+                <span class="glyphicon glyphicon-plus-sign green-icon"></span>
+                <span class="txt">DELETE</span>
               </a>
             </div>
-            <div class="media-body">
-              <div class="order-history" *ngFor="let topic of topics">
-                <div class="history-head">
-                  <span>{{topic.displayName}}</span>
-                  <div class="pull-right hostOrderLink" *ngIf="user.role=='TEACHER'">
-                      <a (click)="userWorkSpace(topic)">WorkSpace</a>
-                  </div>
-                </div>
-                <div class="history-body">
-                    <div class="media-left">
-                        <!--img class="person-card-avatar bigPicture" src="{{topic.icon?topic.icon:'assets/images/class.jpg'}}">
-                        <a id="photoSelector" mat-icon-button (click)='onChangeImage(topic)'>
-                          <mat-icon>photo_camera</mat-icon> Edit image
-                        </a-->
-                        <div [innerHtml]="videoContent" (click)="playVideo(topic)"></div>
-                      </div>
-                  <div class="media-left">
-                    <span>{{topic.description}}</span>
-                  </div>
-                </div>
-                <div class="history-foot">
-                  <div class="pull-right">
-                    <a class="action-link" (click)="editChapterDetail(chapter)">
-                      <span class="glyphicon glyphicon-plus-sign green-icon"></span>
-                      <span class="txt">EDIT</span>
-                    </a>
-                    <a class="action-link" (click)="deleteChapterDetail(chapter)">
-                      <span class="glyphicon glyphicon-plus-sign green-icon"></span>
-                      <span class="txt">DELETE</span>
-                    </a>
-                  </div>
 
-                </div>
-              </div>
-            </div>
           </div>
         </div>
       </div>
-
     </div>
   </div>
 </div>
