changes for school content

--- a/WEB/src/app/home/content-mgmnt/content-subject/content-topic/content-topic.html
+++ b/WEB/src/app/home/content-mgmnt/content-subject/content-topic/content-topic.html
@@ -2,12 +2,12 @@
   <div class="media-body">
     <div class="order-history">
       <div class="history-head">
-        <span>{{subjectDetail.displayName}}</span>
+        <span>{{chapter.displayName}}</span>
       </div>
       <div class="history-body">
         <div class="media-left">
-          <img class="person-card-avatar bigPicture" src="{{subjectDetail.icon?subjectDetail.icon:'assets/images/class.jpg'}}">
-          <span>{{subjectDetail.description}}</span>
+          <img class="person-card-avatar bigPicture" src="{{chapter.icon?chapter.icon:'assets/images/class.jpg'}}">
+          <span>{{chapter.description}}</span>
         </div>
       </div>
     </div>
