--- a/WEB/src/app/home/content-mgmnt/content-subject/content-topic/content-topic.html
+++ b/WEB/src/app/home/content-mgmnt/content-subject/content-topic/content-topic.html
@@ -23,43 +23,51 @@
           <span class="txt">Add Topic</span>
         </a>
       </div>
-      <div class="media-body">
-        <div class="order-history" *ngFor="let topic of topics">
-          <div class="history-head">
-            <span>{{topic.displayName}}</span>
-            <div class="pull-right hostOrderLink">
-              <a (click)="userWorkSpace(topic)">WorkSpace</a>
+      <div class="row">
+        <div class="media-body" *ngFor="let topic of topics">
+          <div class="col-md-4">
+            <div class="history-head">
+              <span>{{topic.displayName}}</span>
+              <div class="pull-right hostOrderLink">
+                <a (click)="userWorkSpace(topic)">WorkSpace</a>
+              </div>
             </div>
-          </div>
-          <div class="history-body">
-            <div class="media-left">
-              <video width="400" controls>
-                <source src="{{topic.playFileURL}}" type="video/mp4">
+            <vg-player (onPlayerReady)="onPlayerReady($event)">
+              <vg-overlay-play></vg-overlay-play>
+              <vg-buffering></vg-buffering>
+              <vg-controls>
+                <vg-play-pause></vg-play-pause>
+                <vg-playback-button></vg-playback-button>
+                <vg-time-display vgProperty="current" vgFormat="mm:ss"></vg-time-display>
+                <vg-scrub-bar>
+                  <vg-scrub-bar-current-time></vg-scrub-bar-current-time>
+                  <vg-scrub-bar-buffering-time></vg-scrub-bar-buffering-time>
+                </vg-scrub-bar>
+                <vg-time-display vgProperty="left" vgFormat="mm:ss"></vg-time-display>
+                <vg-time-display vgProperty="total" vgFormat="mm:ss"></vg-time-display>
+                <vg-track-selector></vg-track-selector>
+                <vg-mute></vg-mute>
+                <vg-volume></vg-volume>
+                <vg-fullscreen></vg-fullscreen>
+              </vg-controls>
+              <video [vgMedia]="media" #media preload="auto" crossorigin>
+                <source src="http://static.videogular.com/assets/videos/videogular.mp4" type="video/mp4">
               </video>
+            </vg-player>
+            <div class="history-foot">
+              <div class="pull-right">
+                <a class="action-link" (click)="editChapterDetail(topic)">
+                  <span class="glyphicon glyphicon-plus-sign green-icon"></span>
+                  <span class="txt">EDIT</span>
+                </a>
+                <a class="action-link" (click)="deleteChapterDetail(topic)">
+                  <span class="glyphicon glyphicon-plus-sign green-icon"></span>
+                  <span class="txt">DELETE</span>
+                </a>
+              </div>
             </div>
-            <div class="media-left">
-              <span>{{topic.description}}</span>
-            </div>
-          </div>
-          <div class="history-foot">
-            <div class="pull-right">
-              <a class="action-link" (click)="uploadVideo(topic)">
-                <span class="glyphicon glyphicon-plus-sign green-icon"></span>
-                <span class="txt">Upload Video</span>
-              </a>
-              <a class="action-link" (click)="editChapterDetail(topic)">
-                <span class="glyphicon glyphicon-plus-sign green-icon"></span>
-                <span class="txt">EDIT</span>
-              </a>
-              <a class="action-link" (click)="deleteChapterDetail(topic)">
-                <span class="glyphicon glyphicon-plus-sign green-icon"></span>
-                <span class="txt">DELETE</span>
-              </a>
-            </div>
-
           </div>
         </div>
       </div>
     </div>
   </div>
-</div>
