--- a/WEB/src/app/home/content-mgmnt/content-mgmnt.component.html
+++ b/WEB/src/app/home/content-mgmnt/content-mgmnt.component.html
@@ -18,10 +18,10 @@
       <div class="media-body">
         <div class="order-history">
           <div class="history-head">
-            <span>{{class.displayName}}</span>
+            <span><strong>{{class.displayName}}</strong></span>
             <a class="action-link pull-right" (click)="viewSubjectList(class)">
               <span class="glyphicon glyphicon-plus-sign green-icon"></span>
-              <span class="txt">View Subjects</span>
+              <span class="txt">Subjects</span>
             </a>
           </div>
           <div class="history-body">
@@ -41,10 +41,6 @@
                 <a class="action-link" (click)="editClassDetails(class)">
                   <span class="glyphicon glyphicon-plus-sign green-icon"></span>
                   <span class="txt">EDIT</span>
-                </a>
-                <a class="action-link" (click)="deleteClassDetails(class)">
-                  <span class="glyphicon glyphicon-plus-sign green-icon"></span>
-                  <span class="txt">DELETE</span>
                 </a>
               </div>
             </div>
