changes for school and class

--- a/WEB/src/app/home/content-mgmnt/class-setup-dialog.html
+++ b/WEB/src/app/home/content-mgmnt/class-setup-dialog.html
@@ -9,10 +9,10 @@
             <mat-label>Class Name</mat-label>
             <input matInput placeholder="Class Name" [(ngModel)]="classSetup.displayName" name="displayName" required>
         </mat-form-field>
-        <mat-form-field appearance="outline" class="example-full-width">
+        <!--mat-form-field appearance="outline" class="example-full-width">
             <mat-label>Description</mat-label>
             <textarea matInput placeholder="Description" [(ngModel)]="classSetup.description" name="description" required></textarea>
-        </mat-form-field>
+        </mat-form-field-->
         <div mat-dialog-actions class="host-table-header">
             <button id="updateBtn" mat-raised-button color="primary" (click)="saveClassChange()">{{operationType}}</button>
             <div class="divider"></div>
