--- a/WEB/src/app/home/content-mgmnt/content-mgmnt.component.html
+++ b/WEB/src/app/home/content-mgmnt/content-mgmnt.component.html
@@ -19,12 +19,8 @@
         <div class="order-history">
           <div class="history-head">
             <span><strong>{{class.displayName}}</strong></span>
-            <a class="action-link pull-right" (click)="viewSubjectList(class)">
-              <span class="glyphicon glyphicon-plus-sign green-icon"></span>
-              <span class="txt">Subjects</span>
-            </a>
           </div>
-          <div class="history-body">
+          <!--div class="history-body">
             <div class="media-left">
               <img class="person-card-avatar bigPicture" src="{{class.icon?class.icon:'assets/images/class.jpg'}}">
               <a id="photoSelector" mat-icon-button (click)='onChangeImage(class)'>
@@ -34,9 +30,13 @@
             <div class="media-left">
               <span>{{class.description}}</span>
             </div>
-          </div>
+          </div-->
           <div class="history-foot">
             <div class="action-btns">
+              <a class="action-link pull-right" (click)="viewSubjectList(class)">
+                <span class="glyphicon glyphicon-plus-sign green-icon"></span>
+                <span class="txt">Subjects</span>
+              </a>
               <div class="pull-right">
                 <a class="action-link" (click)="editClassDetails(class)">
                   <span class="glyphicon glyphicon-plus-sign green-icon"></span>
