--- a/LICENSE_BUILDER/WEB/src/app/public/license/license.html
+++ b/LICENSE_BUILDER/WEB/src/app/public/license/license.html
@@ -1,3 +1,8 @@
+<div class="navbar navbar-default navbar-fixed-top">
+    <div class="navbar-header">
+        <a target="_blank" class="navbar-brand">Company Name</a>
+    </div>
+</div>
 <mat-card>
     <button mat-raised-button (click)="registerNewLicense()"> Register New License</button>
     <button mat-raised-button (click)="renewNewLicense()"> Renew License </button>
@@ -5,9 +10,9 @@
 </mat-card>
 <mat-card>
     <mat-card-header>
-        <mat-card-title> License Details</mat-card-title>
+        <mat-card-title> License List</mat-card-title>
     </mat-card-header>
-    <mat-form-field>
+    <mat-form-field  class="example-full-width">
         <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
     </mat-form-field>
     <div class="mat-elevation-z8">
@@ -23,7 +28,7 @@
             <!-- Name Column -->
             <ng-container matColumnDef="activationDate">
                 <th mat-header-cell *matHeaderCellDef> Activated </th>
-                <td mat-cell *matCellDef="let element"> {{element.activationDate}} </td>
+                <td mat-cell *matCellDef="let element"> {{element.activationDate | date:'fullDate'}} </td>
             </ng-container>
 
             <!-- Weight Column -->
